<resources>
    <string name="app_name">level1-task2</string>
    <string name="title">Conjunction (AND)</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="ab">A ^ B</string>
    <string name="t">T</string>
    <string name="f">F</string>
    <string name="submit">Submit</string>
    <string name="correct">Correct</string>
    <string name="incorrect">Incorrect</string>
</resources>